--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en class=page><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Kickstarter</title><link rel="icon shortcut" href=/favicon2.606400e0.svg type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin=anonymous><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Kickstarter.d7a6c529.css><body class=page__body>
+<!DOCTYPE html><html lang=en class=page><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Kickstarter</title><link rel="icon shortcut" href=/favicon2.606400e0.svg type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin=anonymous><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Kickstarter.08ff8187.css><body class=page__body>
     <header id=header class=header>
       <div class=container>
         <div class=top-bar>
@@ -393,6 +393,10 @@
         </div>
       </div>
     </footer>
+   <button class=button--back-to-top id=backToTop aria-label="Voltar ao topo">
+  ↑
+</button>
     <script src=/Kickstarter.02b76a1c.js></script>
+    <script type=module src=/Kickstarter.8fd3aff4.js></script>
   
 
